# factory-of-the-future

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dashboard.c  docker-compose.yml  factory-test.c  factory.c  ml_module.c
.cmake/api/v1/reply/: cache-v2-676f24718e713bf01ae2.json  cmakeFiles-v1-65c801c2e4836e917c67.json  codemodel-v2-a318dea1cad6cf4a233f.json  index-2021-12-02T18-19-27-0192.json  target-dashboard-Debug-d16ad5ce35920deb01c6.json  target-factory-Debug-f7952f8b5b9b78151565.json  target-ml-Debug-8b7e589d5e7c4a8cfeae.json
actuators/: led.c  led.h  relay.c  relay.h
dashboard/: plot.h
dashlib/: commands.h  database.h  factory_comm.c  factory_comm.h  plot.c
factory_machine_learning/: Makefile  machine_learning  machine_learning.c
factory_machine_learning/data/: X_predict.csv  X_train.csv  y_train.csv
factory_machine_learning/src/: Makefile  fast-lr  fast-lr.c  getFactoryData.c  predict.c
interfaces/: Makefile  network_commands.h  peripherals.h  peripherals_network.c  peripherals_network.h  test  test.c
mlearn/: csv.c  csv.h  data_files.c  fit.c  predict.c  predict_temp.c  predict_temp.h
network/: connection.c  connection.h  ip_address.c  tcp.h  tcp_client.c  tcp_ip.h  tcp_server.c  tcp_tester.c
peripherals/: peripherals_control.c  peripherals_test.c
sensors/: sensor.c  sensor.h
utils/: host_list.c  host_list.h  sensor_history.c  sensor_history.h
